--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "ExpiresMinutes":30
   },
   "connectionString":{
-    "connectionString": "server=localhost;user=root;password=23class;database=Unity"
+    "connectionString": "Data Source=DESKTOP-VAOFU4A;Initial Catalog=UnityApi;Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
