--- a/UnityArenaApi.csproj
+++ b/UnityArenaApi.csproj
@@ -12,5 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0"/>
     <PackageReference Include="AutoMapper" Version="7.0.1"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0"/>
   </ItemGroup>
 </Project>
