--- a/UnityArenaApi.csproj
+++ b/UnityArenaApi.csproj
@@ -3,16 +3,17 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.1"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0"/>
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0"/>
-    <PackageReference Include="MySqlConnector" Version="1.2.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0"/>
     <PackageReference Include="AutoMapper" Version="7.0.1"/>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.0"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
+    <PackageReference Include="MySqlConnector" Version="1.2.1"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.0"/>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7"/>
   </ItemGroup>
 </Project>
